# swarm

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  swarm.yaml.example
.claude/: settings.json
.claude/commands/: check.md  commit.md  diagnose.md  fix-and-ship.md  get-latest.md  interview.md  test.md
.claude/hooks/: lint-after-edit.sh  pre-commit-check.sh
.github/workflows/: test.yml  version-bump.yml
docs/: claude-code-insights.md  claude-code-roadmap.md  features-roadmap.md  multi-llm-providers.md  openapi.yaml  websocket-protocol.md
docs/audit/: context-usage-data-source.md
docs/audits/: config-save-chain-2026-05-04.md
docs/specs/: phase4-mcp-messaging.md  playbook-synthesis-loop.md
scripts/: release.py
src/swarm/: __init__.py  __main__.py  cli.py  client.py  config.py  events.py  logging.py  reverse_proxy.py  service.py  tunnel.py  update.py
src/swarm/analysis/: __init__.py  tool_usage.py
src/swarm/auth/: graph.py  jira.py  passkeys.py  password.py  session.py  webauthn.py
src/swarm/buzz/: log.py  pilot.py  rules.py
src/swarm/config/: __init__.py  _known_keys.py  loader.py  models.py  serialization.py  validation.py
src/swarm/coordination/: ownership.py  sync.py
src/swarm/db/: __init__.py  base_store.py  buzz_store.py  config_store.py  core.py  migrate.py  pipeline_store.py  playbook_store.py  proposal_store.py  queen_chat_store.py  schema.py  secrets.py  skills_store.py  task_history.py  task_store.py
src/swarm/drones/: backoff.py  context_pressure.py  coordination.py  decision_executor.py  directives.py  dreamer.py  idle_watcher.py  inter_worker_watcher.py  log.py  oversight_handler.py  pilot.py  poll_dispatcher.py  pressure.py  rules.py  state_tracker.py  store.py  suggest.py  task_lifecycle.py  tuning.py  verifier.py
src/swarm/feedback/: __init__.py  builder.py  collector.py  gh_submit.py  install_id.py  redact.py
src/swarm/git/: __init__.py  conflicts.py  worktree.py
src/swarm/hooks/: approval_hook.sh  complete_task_hook.sh  cross_task_hook.sh  event_hook.sh  install.py  session_end_hook.sh  session_start_hook.sh
src/swarm/hooks/commands/: swarm-blocker.md  swarm-finding.md  swarm-handoff.md  swarm-progress.md  swarm-status.md  swarm-warning.md
src/swarm/integrations/: jira.py
src/swarm/mcp/: __init__.py  queen_tools.py  server.py  tools.py
src/swarm/messages/: __init__.py  store.py
src/swarm/notify/: bus.py  desktop.py  email.py  terminal.py  webhook.py
src/swarm/pipelines/: __init__.py  engine.py  models.py  store.py  template.py
src/swarm/playbooks/: __init__.py  consolidator.py  installer.py  models.py  synthesizer.py
src/swarm/providers/: __init__.py  base.py  claude.py  codex.py  events.py  gemini.py  generic.py  opencode.py  styled.py  tuned.py
src/swarm/pty/: __init__.py  bridge.py  buffer.py  holder.py  pool.py  process.py  provider.py  terminal.py
src/swarm/queen/: context.py  contribute.py  oversight.py  queen.py  queue.py  runtime.py  session.py  verifier.py
src/swarm/resources/: monitor.py
src/swarm/server/: analyzer.py  api.py  broadcast.py  config_manager.py  daemon.py  email_service.py  escalation_handler.py  helpers.py  jira_service.py  messages.py  proposal_coordinator.py  proposals.py  resource_monitor.py  state_publisher.py  task_manager.py  task_utils.py  terminal.py  test_runner.py  types.py  webctl.py  worker_service.py
src/swarm/server/routes/: __init__.py  attention.py  config.py  drones.py  events.py  feedback.py  hooks.py  jira.py  messages.py  pipelines.py  playbooks.py  proposals.py  queen.py  system.py  tasks.py  websocket.py  workers.py
src/swarm/services/: __init__.py  registry.py  runner.py
src/swarm/services/handlers/: __init__.py  claude_code_security.py  file_uploader.py  shell_command.py  webhook_notify.py  youtube_scraper.py
src/swarm/tasks/: blockers.py  board.py  cross_task.py  history.py  proposal.py  store.py  task.py  workflows.py
src/swarm/testing/: __init__.py  config.py  log.py  operator.py  project.py  report.py
src/swarm/tmux/: cell.py  hive.py  init.py  layout.py  style.py
src/swarm/ui/: add_worker_modal.py  app.py  buzz_log.py  config_modal.py  confirm_modal.py  decision_history_modal.py  drone_log.py  keys.py  launch_modal.py  proposal_banner.py  proposal_modal.py  queen_modal.py  send_modal.py  styles.tcss  task_panel.py  worker_detail.py  worker_list.py
src/swarm/web/: app.py  log_filter.py
src/swarm/worker/: headless.py  manager.py  memory.py  state.py  usage.py  worker.py
tests/: conftest.py  test_acceptance_criteria.py  test_analyzer.py  test_api.py  test_approval_hook_script.py  test_approve_always.py  test_auth_session.py  test_auth_webauthn.py  test_base_store.py  test_blockers.py  test_board.py  test_bridge.py  test_buffer.py  test_buzz_log.py  test_cell.py  test_claude_code_security_handler.py  test_claude_provider.py  test_cli.py  test_cli_test.py  test_client.py  test_code_review_fixes.py  test_codex_provider.py  test_config.py  test_config_editor.py  test_config_manager.py  test_config_store.py  test_conflicts.py  test_context.py  test_context_awareness.py  test_context_pressure_drone.py  test_coordination.py  test_cross_tasks.py  test_daemon.py  test_db.py  test_db_migration_v9.py  test_decision_executor.py  test_dreamer_drone.py  test_drone_log.py  test_email_service.py  test_events.py  (+115 more)
tests/fakes/: process.py  tmux.py
tests/fixtures/test-project/: pyproject.toml  tasks.yaml
(+35 files in other folders)
